--- a/src/style/sass/_core.scss
+++ b/src/style/sass/_core.scss
@@ -1,55 +1,55 @@
 /* Fonts */
 @font-face {
   font-family: "Raleway";
-  src: url("../fonts/Raleway-Thin.ttf") format('truetype');
+  src: url("../fonts/Raleway-Thin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
 }
 @font-face {
   font-family: "Raleway";
-  src: url("../fonts/Raleway-ExtraLight.ttf") format('truetype');
+  src: url("../fonts/Raleway-ExtraLight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
 @font-face {
   font-family: "Raleway";
-  src: url("../fonts/Raleway-Light.ttf") format('truetype');
+  src: url("../fonts/Raleway-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: "Raleway";
-  src: url("../fonts/Raleway-Regular.ttf") format('truetype');
+  src: url("../fonts/Raleway-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Raleway";
-  src: url("../fonts/Raleway-Medium.ttf") format('truetype');
+  src: url("../fonts/Raleway-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "Raleway";
-  src: url("../fonts/Raleway-SemiBold.ttf") format('truetype');
+  src: url("../fonts/Raleway-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
   font-family: "Raleway";
-  src: url("../fonts/Raleway-Bold.ttf") format('truetype');
+  src: url("../fonts/Raleway-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: "Raleway";
-  src: url("../fonts/Raleway-ExtraBold.ttf") format('truetype');
+  src: url("../fonts/Raleway-ExtraBold.ttf") format("truetype");
   font-weight: 800;
   font-style: normal;
 }
 @font-face {
   font-family: "Raleway";
-  src: url("../fonts/Raleway-Black.ttf") format('truetype');
+  src: url("../fonts/Raleway-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
@@ -63,9 +63,9 @@ $xlarge: "(min-width: 1200px)";
 $xxlarge: "(min-width: 1400px)";
 
 /* Text Color */
-$orange: #DE8667;
-$orange2: #EFB467;
-$background: #322D38;
+$orange: #de8667;
+$orange2: #efb467;
+$background: #322d38;
 $white: #fff;
 
 $fonts: "Raleway";
