--- a/src/style/sass/_header.scss
+++ b/src/style/sass/_header.scss
@@ -73,10 +73,14 @@
         margin-bottom: 18px;
       }
       &.user-item {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        font-size: 1.5rem;
+        > a {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          font-size: 1.5rem;
+          text-decoration: none;
+          color: $dark;
+        }
         .MuiAvatar-root {
           width: 48px;
           height: 48px;
@@ -89,6 +93,7 @@
 @media #{$large} {
   .navbar {
     box-shadow: none;
+    z-index: 10;
   }
   .navbar .navbar-nav {
     align-items: center;
@@ -101,46 +106,50 @@
         margin-bottom: 0;
         width: 137px;
       }
-      .nav-link {
-        color: $dark;
-        font-size: 1.5rem;
-        padding: 0;
-        > span {
-          width: calc(100% - 25px);
-          display: inline-block;
-        }
-      }
-      button.nav-link {
-        background: transparent;
-        border: none;
-        width: 100%;
-        text-align: left;
-      }
-      &:last-child {
-        button.nav-link {
-          color: $orange;
-          > svg > path {
-            fill: $orange;
-          }
-        }
-      }
     }
     &.isAuth {
       > li {
-        margin-bottom: 48px;
+        width: max-content;
+        margin-bottom: 0;
+        margin-right: 24px;
         &:last-child {
-          margin-bottom: 18px;
+          margin-right: 0;
+        }
+        &:nth-child(3) {
+          margin-right: 32px;
+        }
+        button,
+        .nav-link {
+          font-size: 1rem;
+          > span {
+            width: 100%;
+          }
+        }
+        &:last-child {
+          margin-bottom: 0;
         }
         &.user-item {
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
-          font-size: 1.5rem;
-          .MuiAvatar-root {
-            width: 48px;
-            height: 48px;
-            margin-right: 32px;
+          margin-right: 16px;
+          > a {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            font-size: 1rem;
           }
+          .MuiAvatar-root {
+            margin-right: 0;
+          }
+        }
+        button.add-quote {
+          background: transparent;
+          border: none;
+          width: 100%;
+          width: 48px;
+          height: 48px;
+          text-align: center;
+          background: $white;
+          border-radius: 50%;
+          color: $orange;
         }
       }
     }
