--- a/src/style/sass/_core.scss
+++ b/src/style/sass/_core.scss
@@ -65,6 +65,7 @@ $xxlarge: "(min-width: 1400px)";
 /* Text Color */
 $orange: #de8667;
 $orange2: #efb467;
+$red: red;
 $dark: #322d38;
 $white: #fff;
 
@@ -103,6 +104,7 @@ img {
   border-radius: 32px;
   height: 40px;
   line-height: 24px;
+  border: 2px solid transparent;
   &.active:focus,
   &:focus {
     box-shadow: none;
@@ -114,7 +116,7 @@ img {
   &.btn-light {
     background: $white;
     color: $orange;
-    border: 2px solid $orange;
+    border-color: $orange;
   }
 }
 h1.page-title {
