login + register fix

--- a/src/style/sass/_core.scss
+++ b/src/style/sass/_core.scss
@@ -96,6 +96,12 @@ code {
 img {
   max-width: 100%;
 }
+a {
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
+}
 .orange {
   color: $orange;
 }
