--- a/src/style/sass/_topic.scss
+++ b/src/style/sass/_topic.scss
@@ -1,14 +1,21 @@
 .login-page,
 .register-page {
-  max-width: 480px;
-  width: 100%;
-  padding: 0 30px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  > p {
-    text-align: center;
-    font-size: 1rem;
+  .content {
+    max-width: 480px;
+    width: 100%;
+    padding: 0 30px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    > p {
+      text-align: center;
+      font-size: 1rem;
+    }
+  }
+  .background-image {
+    position: fixed;
+    bottom: 0;
+    left: 0;
   }
 }
