--- a/src/style/sass/_core.scss
+++ b/src/style/sass/_core.scss
@@ -125,7 +125,7 @@ a {
     border-color: $orange;
   }
 }
-h1.page-title {
+.page-title {
   font-size: 2.1875rem;
   font-weight: 400;
   > span {
