--- a/src/style/sass/_topic.scss
+++ b/src/style/sass/_topic.scss
@@ -19,3 +19,14 @@
     left: 0;
   }
 }
+/* Modals */
+.modal {
+  padding-top: 95px;
+  .modal-dialog {
+    margin: 0 auto;
+    max-width: 529px;
+    .modal-body {
+      padding: 40px 32px 32px 32px;
+    }
+  }
+}
