--- a/src/style/sass/_footer.scss
+++ b/src/style/sass/_footer.scss
@@ -1,8 +1,5 @@
-.home-page {
-  height: 100vh;
-}
 .footer {
-  background: $orange;
+  background: $orangeLinear;
   border-top-left-radius: 32px;
   border-top-right-radius: 32px;
   height: 65px;
