--- a/src/style/sass/_core.scss
+++ b/src/style/sass/_core.scss
@@ -107,6 +107,9 @@ a {
 .orange {
   color: $orange;
 }
+.w-137 {
+  width: 137px !important;
+}
 .site-btn {
   width: 100%;
   border-radius: 32px;
