homepage explore title

--- a/src/style/sass/_topic.scss
+++ b/src/style/sass/_topic.scss
@@ -37,9 +37,26 @@
   > div {
     padding: 50px 35px 0;
   }
+  .explore-title {
+    text-align: center;
+    width: 100%;
+    margin-top: 61px;
+    > span {
+      display: block;
+      color: $orange;
+    }
+  }
+}
+@media #{$large} {
+  .home-page {
+    .explore-title {
+      margin-top: 174px;
+      font-size: 3.8125rem;
+    }
+  }
 }
 /* Hero */
-.hero-page {
+.hero-section {
   .row .col-lg-6 {
     &:first-child {
       padding: 0;
@@ -66,14 +83,14 @@
   }
 }
 @media #{$large} {
-  .hero-page {
+  .hero-section {
     h1 {
       font-size: 5.125rem;
     }
   }
 }
 @media #{$xxlarge} {
-  .hero-page {
+  .hero-section {
     h1 {
       font-size: 6.125rem;
     }
