--- a/src/style/sass/_core.scss
+++ b/src/style/sass/_core.scss
@@ -130,6 +130,10 @@ a {
     border: 2px solid $orange;
   }
 }
+.site-text {
+  font-size: 1rem;
+  text-align: center;
+}
 .page-title {
   font-size: 2.1875rem;
   font-weight: 400;
