--- a/src/style/sass/_core.scss
+++ b/src/style/sass/_core.scss
@@ -140,6 +140,15 @@ a {
   > span {
     color: $orange;
   }
+  &.secondary {
+    font-size: 1.5rem;
+    color: $orange;
+  }
+}
+@media #{$large} {
+  .page-title.secondary {
+    font-size: 2.1875rem;
+  }
 }
 .login-page ~ .footer,
 .register-page ~ .footer {
