--- a/src/style/sass/_topic.scss
+++ b/src/style/sass/_topic.scss
@@ -81,11 +81,10 @@
   border-radius: 1rem;
   width: 100%;
   height: 168px;
-  margin: 1rem auto 0 auto;
+  margin: 2rem auto 0 auto;
   max-width: 420px;
   display: flex;
   padding: 4px 2rem 1rem 1rem;
-  float: left;
   .voting {
     display: flex;
     width: 27px;
@@ -118,6 +117,15 @@
     }
   }
 }
+.most-liked-title {
+  margin: 64px 0 1rem;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.most-liked-text {
+  font-size: 1rem;
+  text-align: center;
+}
 @media #{$large} {
   .home-page {
     .explore-title {
@@ -129,6 +137,13 @@
     h1 {
       font-size: 5.125rem;
     }
+  }
+  .most-liked-title {
+    margin: 127px 0 1rem;
+    font-size: 1.5rem;
+  }
+  .most-liked-text {
+    font-size: 1rem;
   }
 }
 @media #{$xxlarge} {
