--- a/src/style/sass/_topic.scss
+++ b/src/style/sass/_topic.scss
@@ -98,6 +98,7 @@
   .quote-part {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding-left: 21px;
     width: 268px;
     .quote-text {
@@ -167,6 +168,22 @@
     }
     > p {
       margin: 0 auto 38px;
+    }
+    .quotes-wrap {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      max-height: 735px;
+      > div {
+        margin: 0 0 19px 0;
+        width: calc(100% / 3 - 40px);
+        &:nth-child(4),
+        &:nth-child(5),
+        &:nth-child(6) {
+          margin-left: 20px;
+          margin-right: 20px;
+        }
+      }
     }
     .load-more {
       width: 148px;
