--- a/src/style/sass/_topic.scss
+++ b/src/style/sass/_topic.scss
@@ -60,6 +60,7 @@
     }
     &:last-child {
       padding-right: 0;
+      padding-left: 0;
     }
   }
   h1 {
@@ -83,12 +84,13 @@
 .quote-block {
   padding: 1rem;
   border-radius: 1rem;
-  width: 100%;
+  width: 344px;
   margin: 2rem auto 0 auto;
   max-width: 420px;
   display: flex;
   padding: 1rem 2rem 1rem 1rem;
   background: $white;
+  box-shadow: 0px 0px 8px rgba($color: $black, $alpha: 0.15);
   .voting {
     display: flex;
     width: 27px;
@@ -119,6 +121,28 @@
         font-size: 0.75rem;
         margin-left: 2px;
       }
+    }
+  }
+}
+.hero-section .hero-quotes-wrap {
+  position: relative;
+  > .quote-block {
+    border-radius: 8px;
+    filter: blur(4px);
+    width: 85%;
+    @media (min-width: 450px) {
+      width: 302px;
+    }
+    &:nth-child(2) {
+      width: 100%;
+      border-radius: 1rem;
+      filter: blur(0);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 10;
+      margin-top: 0;
     }
   }
 }
@@ -180,9 +204,20 @@
       font-size: 3.8125rem;
     }
   }
+  .quote-block {
+    width: 100%;
+  }
   .hero-section {
     h1 {
       font-size: 5.125rem;
+    }
+    .hero-quotes-wrap {
+      > .quote-block {
+        width: 387px;
+        &:nth-child(2) {
+          width: 100%;
+        }
+      }
     }
   }
   .homepage-most-liked {
