--- a/src/style/sass/_topic.scss
+++ b/src/style/sass/_topic.scss
@@ -1,13 +1,13 @@
 .login-page,
 .register-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 73px 0 156px;
   .content {
     max-width: 480px;
     width: 100%;
     padding: 0 30px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     > p {
       text-align: center;
       font-size: 1rem;
@@ -268,6 +268,10 @@
   }
 }
 @media #{$large} {
+  .login-page,
+  .register-page {
+    padding: 156px 0;
+  }
   .home-page {
     .explore-title {
       margin-top: 174px;
