loading/error screen + fix routes

--- a/src/style/sass/_topic.scss
+++ b/src/style/sass/_topic.scss
@@ -1,3 +1,11 @@
+.loading-screen {
+  background: $orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
 .login-page,
 .register-page {
   display: flex;
@@ -103,7 +111,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    > a,
     > button {
+      color: $black;
       background: transparent;
       border: none;
     }
