--- a/src/style/sass/_topic.scss
+++ b/src/style/sass/_topic.scss
@@ -105,6 +105,16 @@
   @media #{$small} {
     width: 100%;
   }
+  .add-quote {
+    border: none;
+    width: 48px;
+    height: 48px;
+    margin: 0 auto;
+    text-align: center;
+    background: $white;
+    border-radius: 50%;
+    color: $orange;
+  }
   .voting {
     display: flex;
     width: 27px;
