--- a/src/style/sass/_core.scss
+++ b/src/style/sass/_core.scss
@@ -61,6 +61,7 @@ $medium: "(min-width: 768px)";
 $large: "(min-width: 992px)";
 $xlarge: "(min-width: 1200px)";
 $xxlarge: "(min-width: 1400px)";
+$huge: "(min-width: 1680px)";
 
 /* Text Color */
 $orange: #de8667;
